y.output
State 196 conflicts: 1 shift/reduce


Grammar

    0 $accept: Programa $end

    1 Programa: Cabecera_programa bloque

    2 Cabecera_programa: MAIN LEFT_PARENTHESIS argumentos RIGHT_PARENTHESIS

    3 $@1: %empty

    4 bloque: LEFT_KEY $@1 inbloque RIGHT_KEY

    5 inbloque: Declar_de_variables_locales Declar_de_subprogs Sentencias
    6         | Declar_de_variables_locales Declar_de_subprogs

    7 Declar_de_subprogs: Declar_de_subprogs Declar_subprog
    8                   | %empty

    9 $@2: %empty

   10 Declar_subprog: Cabecera_subprograma $@2 bloque

   11 $@3: %empty

   12 Declar_de_variables_locales: INITVAR $@3 Variables_locales ENDVAR
   13                            | %empty

   14 Variables_locales: Variables_locales Cuerpo_declar_variables
   15                  | Cuerpo_declar_variables

   16 $@4: %empty

   17 Cuerpo_declar_variables: tipo $@4 list_id SEMICOLON
   18                        | error

   19 $@5: %empty

   20 $@6: %empty

   21 $@7: %empty

   22 Cabecera_subprograma: tipo ID $@5 $@6 $@7 LEFT_PARENTHESIS argumentos RIGHT_PARENTHESIS

   23 argumentos: argumentos COMA argumento
   24           | argumento
   25           | %empty
   26           | error

   27 $@8: %empty

   28 argumento: tipo ID $@8

   29 $@9: %empty

   30 Sentencias: Sentencias $@9 Sentencia

   31 $@10: %empty

   32 Sentencias: $@10 Sentencia

   33 Sentencia: bloque
   34          | sentencia_contador
   35          | sentencia_asignacion
   36          | sentencia_if
   37          | sentencia_while
   38          | sentencia_entrada
   39          | sentencia_salida
   40          | sentencia_return
   41          | sentencia_for
   42          | sentencia_list

   43 sentencia_contador: PLUSPLUS expresion SEMICOLON
   44                   | MINUSMINUS expresion SEMICOLON
   45                   | expresion PLUSPLUS SEMICOLON
   46                   | expresion MINUSMINUS SEMICOLON

   47 sentencia_asignacion: ID ASSIGN expresion SEMICOLON

   48 sentencia_if: IF LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS THEN Sentencia
   49             | IF LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS THEN Sentencia ELSE Sentencia

   50 sentencia_while: WHILE LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS Sentencia

   51 sentencia_entrada: IN CADENA list_id SEMICOLON
   52                  | IN list_id SEMICOLON

   53 sentencia_salida: OUT list_expresiones_o_cadena SEMICOLON

   54 @11: %empty

   55 sentencia_return: RETURN expresion @11 SEMICOLON

   56 sentencia_for: FOR ID ASSIGN_FOR constante TO constante DO bloque

   57 sentencia_list: expresion LIST_OP
   58               | DOLLAR expresion

   59 expresion: NEG expresion
   60          | COUNT expresion
   61          | QUEST expresion
   62          | SYMBOL_OP expresion
   63          | expresion SYMBOL_OP expresion
   64          | expresion BINARY_OP expresion
   65          | expresion BINARY_LIST_OP_I expresion
   66          | expresion BINARY_LIST_OP_L expresion
   67          | expresion AND_OP expresion
   68          | expresion OR_OP expresion
   69          | expresion XOR_OP expresion
   70          | expresion RELATION_OP expresion
   71          | expresion EQUALS_OP expresion
   72          | expresion AT expresion
   73          | expresion MINUSMINUS expresion
   74          | ID
   75          | constante
   76          | funcion
   77          | expresion PLUSPLUS expresion AT AT expresion
   78          | LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS
   79          | error

   80 funcion: cabecera_func argumentos_func

   81 cabecera_func: ID LEFT_PARENTHESIS

   82 argumentos_func: list_expresiones RIGHT_PARENTHESIS
   83                | RIGHT_PARENTHESIS

   84 list_expresiones_o_cadena: list_expresiones_o_cadena COMA exp_cad
   85                          | exp_cad

   86 exp_cad: expresion
   87        | CADENA

   88 constante: CONST_INT
   89          | CONST_DOUBLE
   90          | CONST_CHAR
   91          | CONST_BOOLEAN
   92          | const_list_int
   93          | const_list_double
   94          | const_list_boolean
   95          | const_list_char

   96 list_expresiones: list_expresiones COMA expresion
   97                 | expresion

   98 tipo: BASIC_TYPES
   99     | LIST_OF BASIC_TYPES

  100 const_list_int: LEFT_BRACKET list_int RIGHT_BRACKET

  101 list_int: list_int COMA CONST_INT
  102         | CONST_INT

  103 const_list_double: LEFT_BRACKET list_double RIGHT_BRACKET

  104 list_double: list_double COMA CONST_DOUBLE
  105            | CONST_DOUBLE

  106 const_list_boolean: LEFT_BRACKET list_boolean RIGHT_BRACKET

  107 list_boolean: list_boolean COMA CONST_BOOLEAN
  108             | CONST_BOOLEAN

  109 const_list_char: LEFT_BRACKET list_char RIGHT_BRACKET

  110 list_char: list_char COMA CONST_CHAR
  111          | CONST_CHAR

  112 list_id: list_id COMA ID
  113        | ID
  114        | list_id error ID


Terminals, with rules where they appear

$end (0) 0
error (256) 18 26 79 114
MAIN (258) 2
RIGHT_PARENTHESIS (259) 2 22 48 49 50 78 82 83
LEFT_KEY (260) 4
RIGHT_KEY (261) 4
LEFT_BRACKET (262) 100 103 106 109
RIGHT_BRACKET (263) 100 103 106 109
SEMICOLON (264) 17 43 44 45 46 47 51 52 53 55
COMA (265) 23 84 96 101 104 107 110 112
ASSIGN (266) 47
IF (267) 48 49
THEN (268) 48 49
ELSE (269) 49
WHILE (270) 50
RETURN (271) 55
FOR (272) 56
ASSIGN_FOR (273) 56
TO (274) 56
DO (275) 56
OUT (276) 53
IN (277) 51 52
INITVAR (278) 12
ENDVAR (279) 12
LIST_OF (280) 99
BASIC_TYPES (281) 98 99
CADENA (282) 51 87
OR_OP (283) 68
AND_OP (284) 67
XOR_OP (285) 69
EQUALS_OP (286) 71
RELATION_OP (287) 70
SYMBOL_OP (288) 62 63
BINARY_OP (289) 64
BINARY_LIST_OP_I (290) 65
BINARY_LIST_OP_L (291) 66
NEG (292) 59
COUNT (293) 60
QUEST (294) 61
MINUSMINUS (295) 44 46 73
PLUSPLUS (296) 43 45 77
DOLLAR (297) 58
LIST_OP (298) 57
AT (299) 72 77
CONST_INT (300) 88 101 102
CONST_DOUBLE (301) 89 104 105
CONST_BOOLEAN (302) 91 107 108
CONST_CHAR (303) 90 110 111
ID (304) 22 28 47 56 74 81 112 113 114
LEFT_PARENTHESIS (305) 2 22 48 49 50 78 81


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
Programa (52)
    on left: 1, on right: 0
Cabecera_programa (53)
    on left: 2, on right: 1
bloque (54)
    on left: 4, on right: 1 10 33 56
$@1 (55)
    on left: 3, on right: 4
inbloque (56)
    on left: 5 6, on right: 4
Declar_de_subprogs (57)
    on left: 7 8, on right: 5 6 7
Declar_subprog (58)
    on left: 10, on right: 7
$@2 (59)
    on left: 9, on right: 10
Declar_de_variables_locales (60)
    on left: 12 13, on right: 5 6
$@3 (61)
    on left: 11, on right: 12
Variables_locales (62)
    on left: 14 15, on right: 12 14
Cuerpo_declar_variables (63)
    on left: 17 18, on right: 14 15
$@4 (64)
    on left: 16, on right: 17
Cabecera_subprograma (65)
    on left: 22, on right: 10
$@5 (66)
    on left: 19, on right: 22
$@6 (67)
    on left: 20, on right: 22
$@7 (68)
    on left: 21, on right: 22
argumentos (69)
    on left: 23 24 25 26, on right: 2 22 23
argumento (70)
    on left: 28, on right: 23 24
$@8 (71)
    on left: 27, on right: 28
Sentencias (72)
    on left: 30 32, on right: 5 30
$@9 (73)
    on left: 29, on right: 30
$@10 (74)
    on left: 31, on right: 32
Sentencia (75)
    on left: 33 34 35 36 37 38 39 40 41 42, on right: 30 32 48 49 50
sentencia_contador (76)
    on left: 43 44 45 46, on right: 34
sentencia_asignacion (77)
    on left: 47, on right: 35
sentencia_if (78)
    on left: 48 49, on right: 36
sentencia_while (79)
    on left: 50, on right: 37
sentencia_entrada (80)
    on left: 51 52, on right: 38
sentencia_salida (81)
    on left: 53, on right: 39
sentencia_return (82)
    on left: 55, on right: 40
@11 (83)
    on left: 54, on right: 55
sentencia_for (84)
    on left: 56, on right: 41
sentencia_list (85)
    on left: 57 58, on right: 42
expresion (86)
    on left: 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
    77 78 79, on right: 43 44 45 46 47 48 49 50 55 57 58 59 60 61 62
    63 64 65 66 67 68 69 70 71 72 73 77 78 86 96 97
funcion (87)
    on left: 80, on right: 76
cabecera_func (88)
    on left: 81, on right: 80
argumentos_func (89)
    on left: 82 83, on right: 80
list_expresiones_o_cadena (90)
    on left: 84 85, on right: 53 84
exp_cad (91)
    on left: 86 87, on right: 84 85
constante (92)
    on left: 88 89 90 91 92 93 94 95, on right: 56 75
list_expresiones (93)
    on left: 96 97, on right: 82 96
tipo (94)
    on left: 98 99, on right: 17 22 28
const_list_int (95)
    on left: 100, on right: 92
list_int (96)
    on left: 101 102, on right: 100 101
const_list_double (97)
    on left: 103, on right: 93
list_double (98)
    on left: 104 105, on right: 103 104
const_list_boolean (99)
    on left: 106, on right: 94
list_boolean (100)
    on left: 107 108, on right: 106 107
const_list_char (101)
    on left: 109, on right: 95
list_char (102)
    on left: 110 111, on right: 109 110
list_id (103)
    on left: 112 113 114, on right: 17 51 52 112 114


State 0

    0 $accept: . Programa $end

    MAIN  shift, and go to state 1

    Programa           go to state 2
    Cabecera_programa  go to state 3


State 1

    2 Cabecera_programa: MAIN . LEFT_PARENTHESIS argumentos RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 4


State 2

    0 $accept: Programa . $end

    $end  shift, and go to state 5


State 3

    1 Programa: Cabecera_programa . bloque

    LEFT_KEY  shift, and go to state 6

    bloque  go to state 7


State 4

    2 Cabecera_programa: MAIN LEFT_PARENTHESIS . argumentos RIGHT_PARENTHESIS

    error        shift, and go to state 8
    LIST_OF      shift, and go to state 9
    BASIC_TYPES  shift, and go to state 10

    RIGHT_PARENTHESIS  reduce using rule 25 (argumentos)
    COMA               reduce using rule 25 (argumentos)

    argumentos  go to state 11
    argumento   go to state 12
    tipo        go to state 13


State 5

    0 $accept: Programa $end .

    $default  accept


State 6

    4 bloque: LEFT_KEY . $@1 inbloque RIGHT_KEY

    $default  reduce using rule 3 ($@1)

    $@1  go to state 14


State 7

    1 Programa: Cabecera_programa bloque .

    $default  reduce using rule 1 (Programa)


State 8

   26 argumentos: error .

    $default  reduce using rule 26 (argumentos)


State 9

   99 tipo: LIST_OF . BASIC_TYPES

    BASIC_TYPES  shift, and go to state 15


State 10

   98 tipo: BASIC_TYPES .

    $default  reduce using rule 98 (tipo)


State 11

    2 Cabecera_programa: MAIN LEFT_PARENTHESIS argumentos . RIGHT_PARENTHESIS
   23 argumentos: argumentos . COMA argumento

    RIGHT_PARENTHESIS  shift, and go to state 16
    COMA               shift, and go to state 17


State 12

   24 argumentos: argumento .

    $default  reduce using rule 24 (argumentos)


State 13

   28 argumento: tipo . ID $@8

    ID  shift, and go to state 18


State 14

    4 bloque: LEFT_KEY $@1 . inbloque RIGHT_KEY

    INITVAR  shift, and go to state 19

    $default  reduce using rule 13 (Declar_de_variables_locales)

    inbloque                     go to state 20
    Declar_de_variables_locales  go to state 21


State 15

   99 tipo: LIST_OF BASIC_TYPES .

    $default  reduce using rule 99 (tipo)


State 16

    2 Cabecera_programa: MAIN LEFT_PARENTHESIS argumentos RIGHT_PARENTHESIS .

    $default  reduce using rule 2 (Cabecera_programa)


State 17

   23 argumentos: argumentos COMA . argumento

    LIST_OF      shift, and go to state 9
    BASIC_TYPES  shift, and go to state 10

    argumento  go to state 22
    tipo       go to state 13


State 18

   28 argumento: tipo ID . $@8

    $default  reduce using rule 27 ($@8)

    $@8  go to state 23


State 19

   12 Declar_de_variables_locales: INITVAR . $@3 Variables_locales ENDVAR

    $default  reduce using rule 11 ($@3)

    $@3  go to state 24


State 20

    4 bloque: LEFT_KEY $@1 inbloque . RIGHT_KEY

    RIGHT_KEY  shift, and go to state 25


State 21

    5 inbloque: Declar_de_variables_locales . Declar_de_subprogs Sentencias
    6         | Declar_de_variables_locales . Declar_de_subprogs

    $default  reduce using rule 8 (Declar_de_subprogs)

    Declar_de_subprogs  go to state 26


State 22

   23 argumentos: argumentos COMA argumento .

    $default  reduce using rule 23 (argumentos)


State 23

   28 argumento: tipo ID $@8 .

    $default  reduce using rule 28 (argumento)


State 24

   12 Declar_de_variables_locales: INITVAR $@3 . Variables_locales ENDVAR

    error        shift, and go to state 27
    LIST_OF      shift, and go to state 9
    BASIC_TYPES  shift, and go to state 10

    Variables_locales        go to state 28
    Cuerpo_declar_variables  go to state 29
    tipo                     go to state 30


State 25

    4 bloque: LEFT_KEY $@1 inbloque RIGHT_KEY .

    $default  reduce using rule 4 (bloque)


State 26

    5 inbloque: Declar_de_variables_locales Declar_de_subprogs . Sentencias
    6         | Declar_de_variables_locales Declar_de_subprogs .
    7 Declar_de_subprogs: Declar_de_subprogs . Declar_subprog

    LIST_OF      shift, and go to state 9
    BASIC_TYPES  shift, and go to state 10

    RIGHT_KEY  reduce using rule 6 (inbloque)
    $default   reduce using rule 31 ($@10)

    Declar_subprog        go to state 31
    Cabecera_subprograma  go to state 32
    Sentencias            go to state 33
    $@10                  go to state 34
    tipo                  go to state 35


State 27

   18 Cuerpo_declar_variables: error .

    $default  reduce using rule 18 (Cuerpo_declar_variables)


State 28

   12 Declar_de_variables_locales: INITVAR $@3 Variables_locales . ENDVAR
   14 Variables_locales: Variables_locales . Cuerpo_declar_variables

    error        shift, and go to state 27
    ENDVAR       shift, and go to state 36
    LIST_OF      shift, and go to state 9
    BASIC_TYPES  shift, and go to state 10

    Cuerpo_declar_variables  go to state 37
    tipo                     go to state 30


State 29

   15 Variables_locales: Cuerpo_declar_variables .

    $default  reduce using rule 15 (Variables_locales)


State 30

   17 Cuerpo_declar_variables: tipo . $@4 list_id SEMICOLON

    $default  reduce using rule 16 ($@4)

    $@4  go to state 38


State 31

    7 Declar_de_subprogs: Declar_de_subprogs Declar_subprog .

    $default  reduce using rule 7 (Declar_de_subprogs)


State 32

   10 Declar_subprog: Cabecera_subprograma . $@2 bloque

    $default  reduce using rule 9 ($@2)

    $@2  go to state 39


State 33

    5 inbloque: Declar_de_variables_locales Declar_de_subprogs Sentencias .
   30 Sentencias: Sentencias . $@9 Sentencia

    RIGHT_KEY  reduce using rule 5 (inbloque)
    $default   reduce using rule 29 ($@9)

    $@9  go to state 40


State 34

   32 Sentencias: $@10 . Sentencia

    error             shift, and go to state 41
    LEFT_KEY          shift, and go to state 6
    LEFT_BRACKET      shift, and go to state 42
    IF                shift, and go to state 43
    WHILE             shift, and go to state 44
    RETURN            shift, and go to state 45
    FOR               shift, and go to state 46
    OUT               shift, and go to state 47
    IN                shift, and go to state 48
    SYMBOL_OP         shift, and go to state 49
    NEG               shift, and go to state 50
    COUNT             shift, and go to state 51
    QUEST             shift, and go to state 52
    MINUSMINUS        shift, and go to state 53
    PLUSPLUS          shift, and go to state 54
    DOLLAR            shift, and go to state 55
    CONST_INT         shift, and go to state 56
    CONST_DOUBLE      shift, and go to state 57
    CONST_BOOLEAN     shift, and go to state 58
    CONST_CHAR        shift, and go to state 59
    ID                shift, and go to state 60
    LEFT_PARENTHESIS  shift, and go to state 61

    bloque                go to state 62
    Sentencia             go to state 63
    sentencia_contador    go to state 64
    sentencia_asignacion  go to state 65
    sentencia_if          go to state 66
    sentencia_while       go to state 67
    sentencia_entrada     go to state 68
    sentencia_salida      go to state 69
    sentencia_return      go to state 70
    sentencia_for         go to state 71
    sentencia_list        go to state 72
    expresion             go to state 73
    funcion               go to state 74
    cabecera_func         go to state 75
    constante             go to state 76
    const_list_int        go to state 77
    const_list_double     go to state 78
    const_list_boolean    go to state 79
    const_list_char       go to state 80


State 35

   22 Cabecera_subprograma: tipo . ID $@5 $@6 $@7 LEFT_PARENTHESIS argumentos RIGHT_PARENTHESIS

    ID  shift, and go to state 81


State 36

   12 Declar_de_variables_locales: INITVAR $@3 Variables_locales ENDVAR .

    $default  reduce using rule 12 (Declar_de_variables_locales)


State 37

   14 Variables_locales: Variables_locales Cuerpo_declar_variables .

    $default  reduce using rule 14 (Variables_locales)


State 38

   17 Cuerpo_declar_variables: tipo $@4 . list_id SEMICOLON

    ID  shift, and go to state 82

    list_id  go to state 83


State 39

   10 Declar_subprog: Cabecera_subprograma $@2 . bloque

    LEFT_KEY  shift, and go to state 6

    bloque  go to state 84


State 40

   30 Sentencias: Sentencias $@9 . Sentencia

    error             shift, and go to state 41
    LEFT_KEY          shift, and go to state 6
    LEFT_BRACKET      shift, and go to state 42
    IF                shift, and go to state 43
    WHILE             shift, and go to state 44
    RETURN            shift, and go to state 45
    FOR               shift, and go to state 46
    OUT               shift, and go to state 47
    IN                shift, and go to state 48
    SYMBOL_OP         shift, and go to state 49
    NEG               shift, and go to state 50
    COUNT             shift, and go to state 51
    QUEST             shift, and go to state 52
    MINUSMINUS        shift, and go to state 53
    PLUSPLUS          shift, and go to state 54
    DOLLAR            shift, and go to state 55
    CONST_INT         shift, and go to state 56
    CONST_DOUBLE      shift, and go to state 57
    CONST_BOOLEAN     shift, and go to state 58
    CONST_CHAR        shift, and go to state 59
    ID                shift, and go to state 60
    LEFT_PARENTHESIS  shift, and go to state 61

    bloque                go to state 62
    Sentencia             go to state 85
    sentencia_contador    go to state 64
    sentencia_asignacion  go to state 65
    sentencia_if          go to state 66
    sentencia_while       go to state 67
    sentencia_entrada     go to state 68
    sentencia_salida      go to state 69
    sentencia_return      go to state 70
    sentencia_for         go to state 71
    sentencia_list        go to state 72
    expresion             go to state 73
    funcion               go to state 74
    cabecera_func         go to state 75
    constante             go to state 76
    const_list_int        go to state 77
    const_list_double     go to state 78
    const_list_boolean    go to state 79
    const_list_char       go to state 80


State 41

   79 expresion: error .

    $default  reduce using rule 79 (expresion)


State 42

  100 const_list_int: LEFT_BRACKET . list_int RIGHT_BRACKET
  103 const_list_double: LEFT_BRACKET . list_double RIGHT_BRACKET
  106 const_list_boolean: LEFT_BRACKET . list_boolean RIGHT_BRACKET
  109 const_list_char: LEFT_BRACKET . list_char RIGHT_BRACKET

    CONST_INT      shift, and go to state 86
    CONST_DOUBLE   shift, and go to state 87
    CONST_BOOLEAN  shift, and go to state 88
    CONST_CHAR     shift, and go to state 89

    list_int      go to state 90
    list_double   go to state 91
    list_boolean  go to state 92
    list_char     go to state 93


State 43

   48 sentencia_if: IF . LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS THEN Sentencia
   49             | IF . LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS THEN Sentencia ELSE Sentencia

    LEFT_PARENTHESIS  shift, and go to state 94


State 44

   50 sentencia_while: WHILE . LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS Sentencia

    LEFT_PARENTHESIS  shift, and go to state 95


State 45

   55 sentencia_return: RETURN . expresion @11 SEMICOLON

    error             shift, and go to state 41
    LEFT_BRACKET      shift, and go to state 42
    SYMBOL_OP         shift, and go to state 49
    NEG               shift, and go to state 50
    COUNT             shift, and go to state 51
    QUEST             shift, and go to state 52
    CONST_INT         shift, and go to state 56
    CONST_DOUBLE      shift, and go to state 57
    CONST_BOOLEAN     shift, and go to state 58
    CONST_CHAR        shift, and go to state 59
    ID                shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 61

    expresion           go to state 97
    funcion             go to state 74
    cabecera_func       go to state 75
    constante           go to state 76
    const_list_int      go to state 77
    const_list_double   go to state 78
    const_list_boolean  go to state 79
    const_list_char     go to state 80


State 46

   56 sentencia_for: FOR . ID ASSIGN_FOR constante TO constante DO bloque

    ID  shift, and go to state 98


State 47

   53 sentencia_salida: OUT . list_expresiones_o_cadena SEMICOLON

    error             shift, and go to state 41
    LEFT_BRACKET      shift, and go to state 42
    CADENA            shift, and go to state 99
    SYMBOL_OP         shift, and go to state 49
    NEG               shift, and go to state 50
    COUNT             shift, and go to state 51
    QUEST             shift, and go to state 52
    CONST_INT         shift, and go to state 56
    CONST_DOUBLE      shift, and go to state 57
    CONST_BOOLEAN     shift, and go to state 58
    CONST_CHAR        shift, and go to state 59
    ID                shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 61

    expresion                  go to state 100
    funcion                    go to state 74
    cabecera_func              go to state 75
    list_expresiones_o_cadena  go to state 101
    exp_cad                    go to state 102
    constante                  go to state 76
    const_list_int             go to state 77
    const_list_double          go to state 78
    const_list_boolean         go to state 79
    const_list_char            go to state 80


State 48

   51 sentencia_entrada: IN . CADENA list_id SEMICOLON
   52                  | IN . list_id SEMICOLON

    CADENA  shift, and go to state 103
    ID      shift, and go to state 82

    list_id  go to state 104


State 49

   62 expresion: SYMBOL_OP . expresion

    error             shift, and go to state 41
    LEFT_BRACKET      shift, and go to state 42
    SYMBOL_OP         shift, and go to state 49
    NEG               shift, and go to state 50
    COUNT             shift, and go to state 51
    QUEST             shift, and go to state 52
    CONST_INT         shift, and go to state 56
    CONST_DOUBLE      shift, and go to state 57
    CONST_BOOLEAN     shift, and go to state 58
    CONST_CHAR        shift, and go to state 59
    ID                shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 61

    expresion           go to state 105
    funcion             go to state 74
    cabecera_func       go to state 75
    constante           go to state 76
    const_list_int      go to state 77
    const_list_double   go to state 78
    const_list_boolean  go to state 79
    const_list_char     go to state 80


State 50

   59 expresion: NEG . expresion

    error             shift, and go to state 41
    LEFT_BRACKET      shift, and go to state 42
    SYMBOL_OP         shift, and go to state 49
    NEG               shift, and go to state 50
    COUNT             shift, and go to state 51
    QUEST             shift, and go to state 52
    CONST_INT         shift, and go to state 56
    CONST_DOUBLE      shift, and go to state 57
    CONST_BOOLEAN     shift, and go to state 58
    CONST_CHAR        shift, and go to state 59
    ID                shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 61

    expresion           go to state 106
    funcion             go to state 74
    cabecera_func       go to state 75
    constante           go to state 76
    const_list_int      go to state 77
    const_list_double   go to state 78
    const_list_boolean  go to state 79
    const_list_char     go to state 80


State 51

   60 expresion: COUNT . expresion

    error             shift, and go to state 41
    LEFT_BRACKET      shift, and go to state 42
    SYMBOL_OP         shift, and go to state 49
    NEG               shift, and go to state 50
    COUNT             shift, and go to state 51
    QUEST             shift, and go to state 52
    CONST_INT         shift, and go to state 56
    CONST_DOUBLE      shift, and go to state 57
    CONST_BOOLEAN     shift, and go to state 58
    CONST_CHAR        shift, and go to state 59
    ID                shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 61

    expresion           go to state 107
    funcion             go to state 74
    cabecera_func       go to state 75
    constante           go to state 76
    const_list_int      go to state 77
    const_list_double   go to state 78
    const_list_boolean  go to state 79
    const_list_char     go to state 80


State 52

   61 expresion: QUEST . expresion

    error             shift, and go to state 41
    LEFT_BRACKET      shift, and go to state 42
    SYMBOL_OP         shift, and go to state 49
    NEG               shift, and go to state 50
    COUNT             shift, and go to state 51
    QUEST             shift, and go to state 52
    CONST_INT         shift, and go to state 56
    CONST_DOUBLE      shift, and go to state 57
    CONST_BOOLEAN     shift, and go to state 58
    CONST_CHAR        shift, and go to state 59
    ID                shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 61

    expresion           go to state 108
    funcion             go to state 74
    cabecera_func       go to state 75
    constante           go to state 76
    const_list_int      go to state 77
    const_list_double   go to state 78
    const_list_boolean  go to state 79
    const_list_char     go to state 80


State 53

   44 sentencia_contador: MINUSMINUS . expresion SEMICOLON

    error             shift, and go to state 41
    LEFT_BRACKET      shift, and go to state 42
    SYMBOL_OP         shift, and go to state 49
    NEG               shift, and go to state 50
    COUNT             shift, and go to state 51
    QUEST             shift, and go to state 52
    CONST_INT         shift, and go to state 56
    CONST_DOUBLE      shift, and go to state 57
    CONST_BOOLEAN     shift, and go to state 58
    CONST_CHAR        shift, and go to state 59
    ID                shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 61

    expresion           go to state 109
    funcion             go to state 74
    cabecera_func       go to state 75
    constante           go to state 76
    const_list_int      go to state 77
    const_list_double   go to state 78
    const_list_boolean  go to state 79
    const_list_char     go to state 80


State 54

   43 sentencia_contador: PLUSPLUS . expresion SEMICOLON

    error             shift, and go to state 41
    LEFT_BRACKET      shift, and go to state 42
    SYMBOL_OP         shift, and go to state 49
    NEG               shift, and go to state 50
    COUNT             shift, and go to state 51
    QUEST             shift, and go to state 52
    CONST_INT         shift, and go to state 56
    CONST_DOUBLE      shift, and go to state 57
    CONST_BOOLEAN     shift, and go to state 58
    CONST_CHAR        shift, and go to state 59
    ID                shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 61

    expresion           go to state 110
    funcion             go to state 74
    cabecera_func       go to state 75
    constante           go to state 76
    const_list_int      go to state 77
    const_list_double   go to state 78
    const_list_boolean  go to state 79
    const_list_char     go to state 80


State 55

   58 sentencia_list: DOLLAR . expresion

    error             shift, and go to state 41
    LEFT_BRACKET      shift, and go to state 42
    SYMBOL_OP         shift, and go to state 49
    NEG               shift, and go to state 50
    COUNT             shift, and go to state 51
    QUEST             shift, and go to state 52
    CONST_INT         shift, and go to state 56
    CONST_DOUBLE      shift, and go to state 57
    CONST_BOOLEAN     shift, and go to state 58
    CONST_CHAR        shift, and go to state 59
    ID                shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 61

    expresion           go to state 111
    funcion             go to state 74
    cabecera_func       go to state 75
    constante           go to state 76
    const_list_int      go to state 77
    const_list_double   go to state 78
    const_list_boolean  go to state 79
    const_list_char     go to state 80


State 56

   88 constante: CONST_INT .

    $default  reduce using rule 88 (constante)


State 57

   89 constante: CONST_DOUBLE .

    $default  reduce using rule 89 (constante)


State 58

   91 constante: CONST_BOOLEAN .

    $default  reduce using rule 91 (constante)


State 59

   90 constante: CONST_CHAR .

    $default  reduce using rule 90 (constante)


State 60

   47 sentencia_asignacion: ID . ASSIGN expresion SEMICOLON
   74 expresion: ID .
   81 cabecera_func: ID . LEFT_PARENTHESIS

    ASSIGN            shift, and go to state 112
    LEFT_PARENTHESIS  shift, and go to state 113

    $default  reduce using rule 74 (expresion)


State 61

   78 expresion: LEFT_PARENTHESIS . expresion RIGHT_PARENTHESIS

    error             shift, and go to state 41
    LEFT_BRACKET      shift, and go to state 42
    SYMBOL_OP         shift, and go to state 49
    NEG               shift, and go to state 50
    COUNT             shift, and go to state 51
    QUEST             shift, and go to state 52
    CONST_INT         shift, and go to state 56
    CONST_DOUBLE      shift, and go to state 57
    CONST_BOOLEAN     shift, and go to state 58
    CONST_CHAR        shift, and go to state 59
    ID                shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 61

    expresion           go to state 114
    funcion             go to state 74
    cabecera_func       go to state 75
    constante           go to state 76
    const_list_int      go to state 77
    const_list_double   go to state 78
    const_list_boolean  go to state 79
    const_list_char     go to state 80


State 62

   33 Sentencia: bloque .

    $default  reduce using rule 33 (Sentencia)


State 63

   32 Sentencias: $@10 Sentencia .

    $default  reduce using rule 32 (Sentencias)


State 64

   34 Sentencia: sentencia_contador .

    $default  reduce using rule 34 (Sentencia)


State 65

   35 Sentencia: sentencia_asignacion .

    $default  reduce using rule 35 (Sentencia)


State 66

   36 Sentencia: sentencia_if .

    $default  reduce using rule 36 (Sentencia)


State 67

   37 Sentencia: sentencia_while .

    $default  reduce using rule 37 (Sentencia)


State 68

   38 Sentencia: sentencia_entrada .

    $default  reduce using rule 38 (Sentencia)


State 69

   39 Sentencia: sentencia_salida .

    $default  reduce using rule 39 (Sentencia)


State 70

   40 Sentencia: sentencia_return .

    $default  reduce using rule 40 (Sentencia)


State 71

   41 Sentencia: sentencia_for .

    $default  reduce using rule 41 (Sentencia)


State 72

   42 Sentencia: sentencia_list .

    $default  reduce using rule 42 (Sentencia)


State 73

   45 sentencia_contador: expresion . PLUSPLUS SEMICOLON
   46                   | expresion . MINUSMINUS SEMICOLON
   57 sentencia_list: expresion . LIST_OP
   63 expresion: expresion . SYMBOL_OP expresion
   64          | expresion . BINARY_OP expresion
   65          | expresion . BINARY_LIST_OP_I expresion
   66          | expresion . BINARY_LIST_OP_L expresion
   67          | expresion . AND_OP expresion
   68          | expresion . OR_OP expresion
   69          | expresion . XOR_OP expresion
   70          | expresion . RELATION_OP expresion
   71          | expresion . EQUALS_OP expresion
   72          | expresion . AT expresion
   73          | expresion . MINUSMINUS expresion
   77          | expresion . PLUSPLUS expresion AT AT expresion

    OR_OP             shift, and go to state 115
    AND_OP            shift, and go to state 116
    XOR_OP            shift, and go to state 117
    EQUALS_OP         shift, and go to state 118
    RELATION_OP       shift, and go to state 119
    SYMBOL_OP         shift, and go to state 120
    BINARY_OP         shift, and go to state 121
    BINARY_LIST_OP_I  shift, and go to state 122
    BINARY_LIST_OP_L  shift, and go to state 123
    MINUSMINUS        shift, and go to state 124
    PLUSPLUS          shift, and go to state 125
    LIST_OP           shift, and go to state 126
    AT                shift, and go to state 127


State 74

   76 expresion: funcion .

    $default  reduce using rule 76 (expresion)


State 75

   80 funcion: cabecera_func . argumentos_func

    error              shift, and go to state 41
    RIGHT_PARENTHESIS  shift, and go to state 128
    LEFT_BRACKET       shift, and go to state 42
    SYMBOL_OP          shift, and go to state 49
    NEG                shift, and go to state 50
    COUNT              shift, and go to state 51
    QUEST              shift, and go to state 52
    CONST_INT          shift, and go to state 56
    CONST_DOUBLE       shift, and go to state 57
    CONST_BOOLEAN      shift, and go to state 58
    CONST_CHAR         shift, and go to state 59
    ID                 shift, and go to state 96
    LEFT_PARENTHESIS   shift, and go to state 61
